<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">GordonRamSDD</string>
    <string name="action_settings">Settings</string>
    <string name="add_textbox_hint">Add a ToDo item</string>
    <string name="add_button_text">Add</string>
    <string name="service_title">Mobile Apps </string>
    <string name="menu_refresh">Refresh</string>
    <string name="checkbox_text">Item Text</string>

    <string name="submit">Submit</string>
    <string name="title_activity_login">IDK</string>

    <!-- Strings related to the main activity page -->
    <string name="ingredients_list">Inventory</string>
    <string name="login">Login</string>
    <string name="recipes">Recipes</string>
    <string name='grocery_list'>Grocery List</string>

    <!-- Strings related to the Inventory page -->
    <string name="create_inven">Enter New Inventory Name</string>
    <string name="existing_inven">Existing Inventories</string>

    <string name="empty_grocery_list">Empty</string>
    <string name="format_ingredients">Name  \t        Quantity        Unit</string>

    <!-- Strings related to Creating Inventory -->
    <string name="new_inven">New Inventory Name</string>

    <string name="delete_inventory">Delete Inventory</string>
    <string name="add_ingredient">Add New Ingredient</string>
    <string name="ingredient_name">Enter Ingredient Name</string>
    <string name="quantity">Enter Quantity</string>
    <string name="unit_measurement">Enter Unit Measurement</string>

    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="delete_ingredient">Delete</string>

    <!-- Strings related to login -->
    <string name="login_page">Login Page</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="attempt">Attempt</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>