<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gordonramsdd.Login">

    <TextView
        android:text="@string/login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:id="@+id/textView_login"
        android:layout_alignParentTop="true" />

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_login"
        android:layout_alignLeft="@+id/textView_login"
        android:layout_alignStart="@+id/textView_login"
        android:layout_marginTop="74dp"
        android:id="@+id/textView_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_username"
        android:layout_alignBaseline="@+id/textView_username"
        android:layout_alignBottom="@+id/textView_username"
        android:layout_toRightOf="@+id/textView_login"
        android:layout_toEndOf="@+id/textView_login" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_alignRight="@+id/textView_username"
        android:layout_alignEnd="@+id/textView_username"
        android:layout_marginTop="33dp"
        android:id="@+id/textView_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_alignBottom="@+id/textView_password"
        android:layout_alignLeft="@+id/et_username"
        android:layout_alignStart="@+id/et_username"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:id="@+id/et_password" />

    <TextView
        android:text="@string/attempt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_password"
        android:layout_alignLeft="@+id/textView_password"
        android:layout_alignStart="@+id/textView_password"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="134dp"
        android:id="@+id/textView_attempt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/et_password"
        android:layout_alignRight="@+id/et_password"
        android:layout_alignEnd="@+id/et_password"
        android:layout_marginTop="121dp"
        android:id="@+id/textView_attempt_count" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_attempt_count"
        android:layout_alignLeft="@+id/textView_attempt"
        android:layout_alignStart="@+id/textView_attempt"
        android:layout_marginTop="34dp"
        android:id="@+id/buttonLogin" />

</RelativeLayout>
